fix overflow errors

--- a/packages/components/src/components/post-header/post-header.scss
+++ b/packages/components/src/components/post-header/post-header.scss
@@ -167,6 +167,22 @@
       align-items: center;
       flex-wrap: nowrap;
       gap: 20px;
+
+      ::slotted(post-mainnavigation) {
+        max-width: calc(100% - (20px + var(--post-header-aux-nav-links-width)));
+
+        .scroll-control .scroll-right::after {
+          content: '';
+          position: absolute;
+          top: 0;
+          right: -30px;
+          width: 32px;
+          height: 100%;
+          pointer-events: none;
+          background: white;
+          overflow: hidden;
+        }
+      }
     }
   }
 
